--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="dist/kakeibo-app.js" defer></script>
+    <script src="dist/kakeibo-app.js"></script>
 </head>
 
 <body>
