--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <option value="16">保険</option>
                 <option value="17">その他</option>
                 <option value="18">未分類</option>
+                <option value="19">test</option>
             </select>
             </div>
             <div id="id2" class="flexcontent2">
