--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="nyuryoku">
+    <div class="input">
         <div class="title">カンタン入力</div>
     <div class="largebackground">
     <div class="category">
@@ -47,7 +47,7 @@
       <div class="expense-and-date-frame">
         <div id="id2" class="expense">
             <input class="money" type="text" id="money" name="money" required minlength="1" maxlength="8" size="10" placeholder="支出額を記入してください">
-            <div class="yen">円</div>
+            <div class="unit">円</div>
           </div>
         <div id="id2" class="dateframe">
             <input class="date" type="date">
