--- a/index.html
+++ b/index.html
@@ -11,55 +11,55 @@
 </head>
 
 <body>
-    <div class="input">
-        <div class="title">カンタン入力</div>
-    <div class="largebackground">
-    <div class="category">
-        <div id="id2" class="item bigcategoryframe">
-            <select class="bigcategoryselector" name="category" id="category">
-                <option value="">大カテゴリを選択してください</option>
-                <option value="1">食費</option>
-                <option value="2">日用品</option>
-                <option value="3">趣味・娯楽</option>
-                <option value="4">交際費</option>
-                <option value="5">交通費</option>
-                <option value="6">衣服・美容</option>
-                <option value="7">健康・医療</option>
-                <option value="8">自動車</option>
-                <option value="9">教養・教育</option>
-                <option value="10">特別な支出</option>
-                <option value="11">現金・カード</option>
-                <option value="12">水道・光熱費</option>
-                <option value="13">通信費</option>
-                <option value="14">住宅</option>
-                <option value="15">税・社会保障</option>
-                <option value="16">保険</option>
-                <option value="17">その他</option>
-                <option value="18">未分類</option>
-            </select>
-            </div>
-            <div id="id2" class="subcategoryframe">
-            <select class="subcategoryselector" name="subcategory" id="subcategory">
-                <option value="">小カテゴリを選択してください</option>
-            </select>
-            </div>
+  <div class="input">
+      <div class="title">カンタン入力</div>
+    <div class="large_background">
+      <div class="category">
+        <div id="id2" class="item big_category_frame">
+          <select class="big_category_selector" name="category" id="category">
+            <option value="">大カテゴリを選択してください</option>
+            <option value="1">食費</option>
+            <option value="2">日用品</option>
+            <option value="3">趣味・娯楽</option>
+            <option value="4">交際費</option>
+            <option value="5">交通費</option>
+            <option value="6">衣服・美容</option>
+            <option value="7">健康・医療</option>
+            <option value="8">自動車</option>
+            <option value="9">教養・教育</option>
+            <option value="10">特別な支出</option>
+            <option value="11">現金・カード</option>
+            <option value="12">水道・光熱費</option>
+            <option value="13">通信費</option>
+            <option value="14">住宅</option>
+            <option value="15">税・社会保障</option>
+            <option value="16">保険</option>
+            <option value="17">その他</option>
+            <option value="18">未分類</option>
+          </select>
+        </div>
+        <div id="id2" class="sub_category_frame">
+          <select class="sub_category_selector" name="sub_category" id="sub_category">
+            <option value="">小カテゴリを選択してください</option>
+          </select>
+        </div>
       </div>
-      <div class="expense-and-date-frame">
+      <div class="expense_and_date_frame">
         <div id="id2" class="expense">
-            <input class="money" type="text" id="money" name="money" required minlength="1" maxlength="8" size="10" placeholder="支出額を記入してください">
-            <div class="unit">円</div>
-          </div>
-        <div id="id2" class="dateframe">
-            <input class="date" type="date">
+          <input class="money" type="text" id="money" name="money" required minlength="1" maxlength="8" size="10" placeholder="支出額を記入してください">
+          <div class="unit">円</div>
+        </div>
+        <div id="id2" class="date_frame">
+          <input class="date" type="date">
         </div>
       </div>
-      <div class="text-area-frame">
-        <textarea class="textarea" type="comment" id="comments" name="comments" cols="30" rows="5" placeholder="備考欄：内容を記入してください（任意）"></textarea>
+      <div class="text_area_frame">
+        <textarea class="text_area" type="comment" id="comments" name="comments" cols="30" rows="5" placeholder="備考欄：内容を記入してください（任意）"></textarea>
       </div>
-      <div class="button-frame">
-          <input class="button" type="button" value="保存する">
-        </div>
+      <div class="button_frame">
+        <input class="button" type="button" value="保存する">
       </div>
     </div>
+  </div>
 </body>
 </html>
